--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>NewsAnalyzer</title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="/images/favicon.svg">
-  <link rel="stylesheet" href="">
+  <title><%= htmlWebpackPlugin.options.title %></title>
+  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('./images/favicon.svg') %>">
+  <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 
 <body>
@@ -15,6 +15,12 @@
     <header class="header root__section">
       <p class="logo" alt="" src="">NewsAnalyzer</p>
     </header>
+    <content class="content root__section">
+
+    </content>
+    <footer class="footer root__section">
+
+    </footer>
   </div>
   <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
