Final webpack settings. Next - start dev layouts

--- a/src/about.html
+++ b/src/about.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="newsfeed on demand">
+  <meta name="author" content="Andrew Bubnov">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('../images/favicon.svg') %>">
-  <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.analitics.css %>">
+  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('./images/favicon.svg') %>">
+  <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.files.chunks.about.css %>">
 </head>
 
 <body>
@@ -22,7 +24,7 @@
 
     </footer>
   </div>
-  <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.analitics.entry %>"></script>
+  <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.about.entry %>"></script>
 </body>
 
 </html>
