--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,25 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <link rel="icon" type="image/svg" sizes="16x16" href="<%= require('./images/favicon.svg') %>">
+  <link rel="icon" type="image/png" sizes="32x32" href="<%= require('./images/favicon.png') %>">
   <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.files.chunks.index.css %>">
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body>
-  <div class="root">
-    <header class="header root__section">
-      <p class="header header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
-      <nav class="header header__nav">
+<body class="page">
+  <header class="header header_white">
+    <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+    <nav class="header__nav">
+      <a href="./index.html" class="header__nav-item header__nav-item_select">Главная</a>
+      <a href="./about.html" class="header__nav-item">О Проекте</a>
+    </nav>
+  </header>
+  <content class="content page">
 
-      </nav>
-    </header>
-    <content class="content root__section">
+  </content>
+  <footer class="footer page">
 
-    </content>
-    <footer class="footer root__section">
-
-    </footer>
-  </div>
+  </footer>
   <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>
 </body>
 
