--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,43 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body class="page">
-  <header class="header header_white">
-    <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
-    <nav class="header__nav">
-      <a href="./index.html" class="header__nav-item header__nav-item_select">Главная</a>
-      <a href="./about.html" class="header__nav-item">О Проекте</a>
-    </nav>
-  </header>
-  <content class="content page">
+<body>
+  <div class="page">
 
-  </content>
-  <footer class="footer page">
+    <header class="header header_main-page">
+      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <nav class="nav header__nav">
+        <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./about.html">О проекте</a>
+      </nav>
+    </header>
 
-  </footer>
+    <search class="search">
+      <div class="search__container">
+        <h1 class="search__title">Что в мире творится?</h1>
+        <blockquote class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в
+          новостях за прошедшую неделю.</blockquote>
+        <form action="" class="form search__form">
+          <input type="text" class="input search__input" name="news-search" required="yes"
+            placeholder="введите тему запроса">
+          <button class="button search__button">Искать</button>
+          <span class="error search__error"></span>
+        </form>
+      </div>
+    </search>
+
+    <content class="content">
+
+    </content>
+
+    <footer class="footer">
+
+    </footer>
+
+  </div>
+
   <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>
+
 </body>
 
 </html>
