Main page in progress

--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,24 @@
     </search>
 
     <content class="content">
-
+      <div class="results">
+        
+      </div>
     </content>
 
     <footer class="footer">
-
+      <p class="copyright footer__copyright">© 2019 Andrew B.</p>
+      <nav class="nav footer__nav">
+        <a class="nav__item link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./about.html">О проекте</a>
+        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+      </nav>
+      <div class="social">
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
+            src="<%=require('./images/github.svg')%>"></a>
+        <a class="social__item" href="https://facebook.com"><img alt="facebook"
+            src="<%=require('./images/fb3.svg')%>"></a>
+      </div>
     </footer>
 
   </div>
