--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
       </div>
     </search>
 
-    <content class="content">
+    <main class="content">
       <div class="results">
         
       </div>
-    </content>
+    </main>
 
     <footer class="footer">
       <p class="copyright footer__copyright">© 2019 Andrew B.</p>
