--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('./images/favicon.png') %>">
+  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('../images/favicon.png') %>">
   <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.files.chunks.about.css %>">
 </head>
 
