--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
-  <link rel="icon" type="image/png" sizes="32x32" href="<%= require('./images/favicon.png') %>">
+  <link rel="icon" type="image/png" sizes="32x32" href="<%= require('../images/favicon.png') %>">
   <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.files.chunks.index.css %>">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
@@ -52,9 +52,9 @@
       </nav>
       <div class="social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
-            src="<%=require('./images/github.svg')%>"></a>
+            src="<%=require('../images/github.svg')%>"></a>
         <a class="social__item" href="https://facebook.com"><img alt="facebook"
-            src="<%=require('./images/fb3.svg')%>"></a>
+            src="<%=require('../images/fb3.svg')%>"></a>
       </div>
     </footer>
 
