--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>About</title>
   <link rel="icon" type="image/svg" sizes="32x32" href="./images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="about.40abbcb15d44189523db.css">
+  <link rel="stylesheet" type="text/css" href="styles/about.7a5277c6dded1e63a344.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
     </footer>
   </div>
-  <script type="text/javascript" src="about.40abbcb15d44189523db.js"></script>
+  <script type="text/javascript" src="scripts/about.7a5277c6dded1e63a344.js"></script>
 </body>
 
 </html>
