--- a/analitics.html
+++ b/analitics.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>Analitics</title>
   <link rel="icon" type="image/svg" sizes="32x32" href="./images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="analitics.c148978421abdb0605a4.css">
+  <link rel="stylesheet" type="text/css" href="styles/analitics.c9f3a04f2a1b93c7005e.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
     </footer>
   </div>
-  <script type="text/javascript" src="analitics.c148978421abdb0605a4.js"></script>
+  <script type="text/javascript" src="scripts/analitics.c9f3a04f2a1b93c7005e.js"></script>
 </body>
 
 </html>
