--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="index.9450850219ee8405a3d6.css">
+  <link rel="stylesheet" type="text/css" href="styles/index.ca9b5a04ab149e307170.css">
   <title>NewsAnalizer</title>
 </head>
 
@@ -37,17 +37,30 @@
       </div>
     </search>
 
-    <content class="content">
-
-    </content>
+    <main class="content">
+      <div class="results">
+        
+      </div>
+    </main>
 
     <footer class="footer">
-
+      <p class="copyright footer__copyright">© 2019 Andrew B.</p>
+      <nav class="nav footer__nav">
+        <a class="nav__item link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./about.html">О проекте</a>
+        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+      </nav>
+      <div class="social">
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
+            src="./images/github.svg"></a>
+        <a class="social__item" href="https://facebook.com"><img alt="facebook"
+            src="./images/fb3.svg"></a>
+      </div>
     </footer>
 
   </div>
 
-  <script type="text/javascript" src="index.9450850219ee8405a3d6.js"></script>
+  <script type="text/javascript" src="scripts/index.ca9b5a04ab149e307170.js"></script>
 
 </body>
 
