--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <title>About</title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="./images/favicon.png">
+  <link rel="icon" type="image/svg" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="styles/about.7a5277c6dded1e63a344.css">
 </head>
 
