--- a/analitics.html
+++ b/analitics.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <title>Analitics</title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="./images/favicon.png">
+  <link rel="icon" type="image/svg" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="styles/analitics.c9f3a04f2a1b93c7005e.css">
 </head>
 
