--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="styles/index.ca9b5a04ab149e307170.css">
   <title>NewsAnalizer</title>
 </head>
@@ -52,9 +52,9 @@
       </nav>
       <div class="social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
-            src="./images/github.svg"></a>
+            src="images/github.svg"></a>
         <a class="social__item" href="https://facebook.com"><img alt="facebook"
-            src="./images/fb3.svg"></a>
+            src="images/fb3.svg"></a>
       </div>
     </footer>
 
