--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,8 +26,8 @@
     <search class="search">
       <div class="search__container">
         <h1 class="search__title">Что в мире творится?</h1>
-        <blockquote class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в
-          новостях за прошедшую неделю.</blockquote>
+        <h2 class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
+          прошедшую неделю.</h2>
         <form action="" class="form search__form">
           <input type="text" class="input search__input" name="news-search" required="yes"
             placeholder="введите тему запроса">
@@ -38,16 +38,19 @@
     </search>
 
     <main class="content">
-      <div class="results">
-        
-      </div>
+      <section class="results">
+        <h3 class="results__title">Результаты поиска</h3>
+        <a class="results__link link" href="analitics.html">Посмотреть аналитику  ></a>
+        <div class="results__block"></div>
+        <button class="results__button button">Показать больше</button>
+      </section>
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">© 2019 Andrew B.</p>
+      <p class="copyright footer__copyright">© 2019 Andrew</p>
       <nav class="nav footer__nav">
-        <a class="nav__item link" href="./index.html">Главная</a>
-        <a class="nav__item link" href="./about.html">О проекте</a>
+        <a class="nav__item link" href="index.html">Главная</a>
+        <a class="nav__item link" href="about.html">О проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
       <div class="social">
