Add new layouts

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,8 +40,18 @@
     <main class="content">
       <section class="results">
         <h3 class="results__title">Результаты поиска</h3>
-        <a class="results__link link" href="analitics.html">Посмотреть аналитику  ></a>
-        <div class="results__block"></div>
+        <a class="results__link link" href="analitics.html">Посмотреть аналитику ></a>
+        <div class="results__block">
+          <a class="card" href="">
+            <img src="<%=require('../images/card-pic-default.jpg')%>" alt="" class="card__pic">
+            <time class="card__date">29 февраля, 2020</time>
+            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
+              tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
+              Odio?</p>
+            <span class="card__link">ЛЕНТА.РУ</span>
+          </a>
+        </div>
         <button class="results__button button">Показать больше</button>
       </section>
     </main>
