Layouts. Result block done

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -49,9 +49,12 @@
             <h4 class="card__title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
+              Odio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
+              tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?</p>
             <span class="card__link">ЛЕНТА.РУ</span>
           </a>
+
 
 
           <a class="card" href="">
