--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -38,7 +38,7 @@
     </search>
 
     <main class="content">
-      <section class="results">
+      <section class="results" disable>
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть аналитику ></a>
         <div class="results__block">
