--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="page">    
+  <div class="page">
 
     <header class="header header_main-page">
       <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
@@ -23,7 +23,7 @@
       </nav>
     </header>
 
-    <search class="search">    
+    <search class="search">
       <div class="search__container">
         <h1 class="search__title">Что в мире творится?</h1>
         <h2 class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
@@ -38,7 +38,7 @@
     </search>
 
     <main class="content">
-      <section class="results" disable>
+      <section class="results">
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть аналитику ></a>
         <div class="results__block">
@@ -46,7 +46,7 @@
           <a class="card" href="">
             <img src="<%=require('../images/card-pic-default.jpg')%>" alt="" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <h4 class="card__title">Lorem ipsum dolor. Lorem ipsum dolor.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
@@ -58,11 +58,9 @@
 
 
           <a class="card" href="">
-            <img src="<%=require('../images/card-pic-default.jpg')%>" alt="" class="card__pic">
+            <img src="<%=require('../images/card-pic-default.jpg')%>" alt="default news image" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Similique id cupiditate velit tempora explicabo ipsum at, maiores quam ullam cum
-              quis ipsa rem accusamus aliquid ad veniam ut iusto.
-            </h4>
+            <h4 class="card__title">Similique.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?</p>
@@ -71,7 +69,8 @@
           <a class="card" href="">
             <img src="<%=require('../images/card-pic-default.jpg')%>" alt="" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur elit.</h4>
+            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur elit. Lorem ipsum dolor sit amet consectetur
+              elit.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?</p>
@@ -101,6 +100,19 @@
 
         </div>
         <button class="results__button button">Показать больше</button>
+      </section>
+      <section class="author">
+        <img class="author__pic" src="<%= require('../images/author_full.jpg') %>" alt="">
+        <h3 class="author__title">Об авторе:</h3>
+        <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
+          занимаетесь, какими технологиями разработки владете.
+          <br><br>
+          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+          потенциальным заказчикам.
+          <br><br>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit dicta libero labore. Beatae excepturi commodi
+          harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
+          explicabo?</p>
       </section>
     </main>
 
