--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 <body>
   <div class="page">
 
+    <header class="header header_main-page">
+      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <nav class="nav header__nav">
+        <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./about.html">О проекте</a>
+      </nav>
+    </header>
+
     <search class="search">
-
-      <header class="header header_main-page">
-        <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
-        <nav class="nav header__nav">
-          <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
-          <a class="nav__item link" href="./about.html">О проекте</a>
-        </nav>
-      </header>
-
       <div class="search__container">
         <h1 class="search__title">Что в мире творится?</h1>
         <h2 class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
@@ -36,18 +35,10 @@
           <span class="error search__error"></span>
         </form>
       </div>
-
-      <!-- <picture class="search__back">        
-        <source srcset="images/titleback_1440px.jpg" media="(max-width: 1440px)">
-        <source srcset="images/titleback_1280px.jpg" media="(max-width: 1280px)">
-        <source srcset="images/titleback_720px.jpg" media="(max-width: 720px)">
-        <img src="images/titleback_1440px.jpg" alt="background">
-      </picture> -->
-
     </search>
 
     <main class="content">
-      <section class="results" disable>
+      <section class="results">
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть аналитику ></a>
         <div class="results__block">
@@ -55,7 +46,7 @@
           <a class="card" href="">
             <img src="images/card-pic-default.jpg" alt="" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <h4 class="card__title">Lorem ipsum dolor. Lorem ipsum dolor.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
@@ -67,11 +58,9 @@
 
 
           <a class="card" href="">
-            <img src="images/card-pic-default.jpg" alt="" class="card__pic">
+            <img src="images/card-pic-default.jpg" alt="default news image" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Similique id cupiditate velit tempora explicabo ipsum at, maiores quam ullam cum
-              quis ipsa rem accusamus aliquid ad veniam ut iusto.
-            </h4>
+            <h4 class="card__title">Similique.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?</p>
@@ -80,7 +69,8 @@
           <a class="card" href="">
             <img src="images/card-pic-default.jpg" alt="" class="card__pic">
             <time class="card__date">29 февраля, 2020</time>
-            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur elit.</h4>
+            <h4 class="card__title">Lorem ipsum dolor sit amet consectetur elit. Lorem ipsum dolor sit amet consectetur
+              elit.</h4>
             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique id cupiditate velit
               tempora explicabo ipsum at, maiores quam ullam cum quis ipsa rem accusamus aliquid ad veniam ut iusto.
               Odio?</p>
@@ -110,6 +100,19 @@
 
         </div>
         <button class="results__button button">Показать больше</button>
+      </section>
+      <section class="author">
+        <img class="author__pic" src="images/author_full.jpg" alt="">
+        <h3 class="author__title">Об авторе:</h3>
+        <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
+          занимаетесь, какими технологиями разработки владете.
+          <br><br>
+          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+          потенциальным заказчикам.
+          <br><br>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit dicta libero labore. Beatae excepturi commodi
+          harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
+          explicabo?</p>
       </section>
     </main>
 
