Main page layouts DONE! Next - About page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -125,7 +125,7 @@
         <a class="nav__item link" href="about.html">О проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
-      <div class="social">
+      <div class="social footer__social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
             src="<%=require('../images/github.svg')%>"></a>
         <a class="social__item" href="https://facebook.com"><img alt="facebook"
