--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,6 +40,12 @@
     </search>
 
     <main class="content">
+
+      <section class="preloader">
+        <i class="preloader__spiner"></i>
+        <span class="preloader__text">Идет поиск новостей...</span>
+      </section>
+
       <section class="results">
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть аналитику ></a>
