--- a/analitics.html
+++ b/analitics.html
@@ -13,18 +13,39 @@
 </head>
 
 <body>
-  <div class="root">
-    <header class="header root__section">
-      <p class="logo" alt="" src="">NewsAnalyzer</p>
+  <div class="page">
+
+    <header class="header">
+      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <nav class="nav header__nav">
+        <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./about.html">О проекте</a>
+      </nav>
     </header>
-    <content class="content root__section">
 
-    </content>
-    <footer class="footer root__section">
+    <main class="content">
 
+    </main>
+
+    <footer class="footer">
+      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <nav class="nav footer__nav">
+        <a class="nav__item link" href="index.html">Главная</a>
+        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+      </nav>
+      <div class="social footer__social">
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
+            src="images/github.svg"></a>
+        <a class="social__item" href="https://facebook.com"><img alt="facebook"
+            src="images/fb3.svg"></a>
+      </div>
     </footer>
+
   </div>
+
   <script type="text/javascript" src="scripts/analitics.c9f3a04f2a1b93c7005e.js"></script>
+
 </body>
 
 </html>
