--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <button class="results__button button">Показать больше</button>
       </section>
       <section class="author">
-        <img class="author__pic" src="images/author_full.jpg" alt="">
+        <img class="author__pic" src="images/author_full.jpg" alt="site autors photo">
         <h3 class="author__title">Об авторе:</h3>
         <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
           занимаетесь, какими технологиями разработки владете.
