--- a/about.html
+++ b/about.html
@@ -13,15 +13,60 @@
 </head>
 
 <body>
-  <div class="root">
-    <header class="header root__section">
-      <p class="logo" alt="" src="">NewsAnalyzer</p>
+  <div class="page">
+
+    <header class="header">
+      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <nav class="nav header__nav">
+        <a class="nav__item link" href="./index.html">Главная</a>
+        <a class="nav__item nav__item_select link" href="./about.html">О проекте</a>
+      </nav>
     </header>
-    <content class="content root__section">
 
-    </content>
-    <footer class="footer root__section">
+    <main class="content">
+      <section class="forclients">
+        <h3 class="forclients__title">Клиентам</h3>
+        <p class="forclients__text">Этот сайт — дипломный проект студента Яндкс.Практикума. Его цель — показать, чему
+          научился студент, и какими технологиями владеет.<br><br>Вёртска сайта выполнена по методологии БЭМ. Это делает
+          сайт гибким и масштабируемым. Кроме того, добавлять новые страницы и функциальность проще и быстрее, чем в
+          проектах, выполненных по другим методологиям. Также
+          сайт проще и дешевле поддерживать.<br><br>Карточки с новостям приходят с сервера и обрабатываются асихронно. То
+          есть сайт продолжает работать, пока от сервера приходит ответ. Это повышает удобство использования
+          сервиса.<br><br>При создании проекта была использона
+          сборка технологией Webpack. Это современных подход к разработке сайтов. Код оптимизируется, а значит, сайт
+          работает быстрее. Также настроена сайт работает в старых браузерах. Даже
+          если посетители — пользователи старых операционных систем у них не будет проблем с отображением. А значит
+          потенциальная аудитория возрастает.<br><br>Проект был проверен экспертами Яндекс.Практикума. И если вашему бизесу
+          нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
+      </section>
+      <section class="author">
+        <img class="author__pic" src="images/author_full.jpg" alt="site autors photo">
+        <h3 class="author__title">Об авторе:</h3>
+        <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
+          занимаетесь, какими технологиями разработки владете.
+          <br><br>
+          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+          потенциальным заказчикам.
+          <br><br>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit dicta libero labore. Beatae excepturi commodi
+          harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
+          explicabo?</p>
+      </section>
+    </main>
 
+    <footer class="footer">
+      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <nav class="nav footer__nav">
+        <a class="nav__item link" href="index.html">Главная</a>
+        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+      </nav>
+      <div class="social footer__social">
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
+            src="images/github.svg"></a>
+        <a class="social__item" href="https://facebook.com"><img alt="facebook"
+            src="images/fb3.svg"></a>
+      </div>
     </footer>
   </div>
   <script type="text/javascript" src="scripts/about.7a5277c6dded1e63a344.js"></script>
