--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="<%= require('../images/favicon.png') %>">
+  <link rel="icon" type="image/svg+xml" sizes="32x32" href="<%= require('../images/favicon.png') %>">
   <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.files.chunks.analitics.css %>">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="page">
 
     <header class="header">
-      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <h1 class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
         <a class="nav__item link" href="./about.html">О проекте</a>
@@ -36,9 +36,9 @@
       </nav>
       <div class="social footer__social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
-            src="<%=require('../images/github.svg')%>"></a>
+          type="image/svg+xml" src="<%=require('../images/github.svg')%>"></a>
         <a class="social__item" href="https://facebook.com"><img alt="facebook"
-            src="<%=require('../images/fb3.svg')%>"></a>
+          type="image/svg+xml" src="<%=require('../images/fb3.svg')%>"></a>
       </div>
     </footer>
 
