--- a/analitics.html
+++ b/analitics.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <title>Analitics</title>
-  <link rel="icon" type="image/svg" sizes="32x32" href="images/favicon.png">
+  <link rel="icon" type="image/svg+xml" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="styles/analitics.c9f3a04f2a1b93c7005e.css">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="page">
 
     <header class="header">
-      <p class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</p>
+      <h1 class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
         <a class="nav__item link" href="./about.html">О проекте</a>
@@ -36,9 +36,9 @@
       </nav>
       <div class="social footer__social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
-            src="images/github.svg"></a>
+          type="image/svg+xml" src="images/github.svg"></a>
         <a class="social__item" href="https://facebook.com"><img alt="facebook"
-            src="images/fb3.svg"></a>
+          type="image/svg+xml" src="images/fb3.svg"></a>
       </div>
     </footer>
 
