Layput about page. Github block in progress

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -19,7 +19,7 @@
       <h1 class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
-        <a class="nav__item link" href="./about.html">О проекте</a>
+        <a class="nav__item link" href="./about.html">О&nbsp;проекте</a>
       </nav>
     </header>
 
@@ -28,10 +28,10 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
         <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
       <div class="social footer__social">
