--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,7 +51,7 @@
       </section>
       <section class="results">
         <h3 class="results__title">Результаты поиска</h3>
-        <a class="results__link link" href="analitics.html">Посмотреть аналитику<img src="<%=require('../images/arrow.svg')%>" alt="open github" class="link__arrow"></a>
+        <a class="results__link link" href="analitics.html">Посмотреть&nbsp;аналитику<img src="<%=require('../images/arrow.svg')%>" alt="open github" class="link__arrow"></a>
         <div class="results__block">
 
           <a class="card" href="">
@@ -110,11 +110,11 @@
 
 
         </div>
-        <button class="results__button button">Показать больше</button>
+        <button class="results__button button">Показать&nbsp;больше</button>
       </section>
       <section class="author">
         <img class="author__pic" src="<%= require('../images/author_full.jpg') %>" type="image/jpeg" alt="site autors photo">
-        <h4 class="author__title">Об авторе:</h3>
+        <h4 class="author__title">Об&nbsp;авторе:</h3>
         <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
           занимаетесь, какими технологиями разработки владете.
           <br><br>
@@ -128,10 +128,10 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
         <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
       <div class="social footer__social">
